--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon --watch './**/*.ts' --exec ts-node src/server.ts"
+    "start": "nodemon --watch './**/*.ts' --exec ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
