--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
