--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-collapse": "^5.1.1",
+    "react-day-picker": "^8.0.7",
     "react-dom": "^18.1.0",
     "react-hotkeys-hook": "^3.4.6",
     "react-redux": "^8.0.2",
