--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-collapse": "^5.1.1",
+    "react-datepicker": "^4.8.0",
     "react-day-picker": "^8.0.7",
     "react-dom": "^18.1.0",
     "react-hotkeys-hook": "^3.4.6",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@types/react-collapse": "^5.0.1",
+    "@types/react-datepicker": "^4.4.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
