--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/uuid": "^8.3.4",
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-collapse": "^5.1.1",
@@ -27,6 +28,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
