--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.8",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/node": "^17.0.32",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
